fix: scrollbar styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,8 +51,7 @@ body.ng-page {
 }
 
 // ngx scrollbar
-ng-scrollbar.ng-scrollbar {
-  flex: 1 1 0;
+:root {
   --scrollbar-border-radius: 7px;
   --scrollbar-padding: 0px;
   --scrollbar-viewport-margin: 0;
@@ -60,8 +59,11 @@ ng-scrollbar.ng-scrollbar {
   --scrollbar-wrapper-color: transparent;
   --scrollbar-thumb-color: var(--mat-sys-outline-variant);
   --scrollbar-thumb-hover-color: var(--mat-sys-outline);
-  --scrollbar-size: 8px;
-  --scrollbar-hover-size: 12px;
+  --scrollbar-thickness: 6;
+  --scrollbar-hover-thickness: 8;
+}
+ng-scrollbar.ng-scrollbar {
+  flex: 1 1 0;
   --scrollbar-thumb-transition: height ease-out 150ms, width ease-out 150ms;
   --scrollbar-track-transition: height ease-out 150ms, width ease-out 150ms;
   --_scrollbar-content-width: 100%;
@@ -171,12 +173,22 @@ input[type="number"] {
 }
 
 ::-webkit-scrollbar {
-  height: 8px;
-  width: 8px;
+  width: calc(var(--scrollbar-thickness) * 1px);
+  height: calc(var(--scrollbar-thickness) * 1px);
+  background-color: var(--scrollbar-wrapper-color);
+  transition: var(--scrollbar-track-transition);
+  &:hover {
+    width: calc(var(--scrollbar-hover-thickness) * 1px);
+    height: calc(var(--scrollbar-hover-thickness) * 1px);
+  }
 }
 ::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.26);
-  border-radius: 8px;
+  background-color: var(--scrollbar-thumb-color);
+  border-radius: var(--scrollbar-border-radius);
+  transition: var(--scrollbar-thumb-transition);
+  &:hover {
+    background-color: var(--scrollbar-thumb-hover-color);
+  }
 }
 
 .hidden {
